Fri Apr  8 10:27:24 EDT 2005

	Add awk syntax file
	Use c syntax file for yacc
	Use c syntax file for lex
	Add cobol syntax file
	Add sed syntax file
	Add postscript syntax file

Thu Apr  7 18:25:07 EDT 2005

	Add sql syntax file

Wed Apr  6 12:39:15 EDT 2005

	New xterm-patch: base64 encode the data to avoid security hole

Fri Apr  1 00:14:58 EST 2005

	Improve jpico: add -search_prompting option.

	Fix ^X ^S bug (was using vsdup() on a non-dynamic string).

	Add autoscrolling (when mouse goes past window edge).

Wed Mar 30 23:47:00 EST 2005

	New xterm-patch fixes i18n problems with mouse.

Tue Mar 29 19:19:42 EST 2005

	Fix some cut & paste bugs.

	Wheel can scroll menus.

	Fix bugs with mouse in hex mode, prompt windows
	and when line numbers enabled.

	Prevent hex mode from prompt windows.

	Fix some i18n issues with mouse:  xterm patch
	needs to be fixed.

Mon Mar 28 02:17:37 EST 2005

	Apply (and fix) background color patch

	Allow background color to be set on object-by-object basis.

Sat Mar 26 09:56:23 EST 2005

	Fix some window resize bugs

	Add support for 16 and 256 color xterms.

Sat Mar 26 00:28:58 EST 2005

	Reformat mouse.c

	Apply diff patch

	Apply vpath patch

	Apply electrum's mouse patch (send mouse off code during
	shell escape)

	Mouse can now resize windows

	Mouse can position cursor in menus.  Double-click selects
	an item.  Need to add scroll.

--- JOE 3.3 begins ---

Mon Mar 21 11:56:56 EST 2005

	Fix segfault problem

	Xcol problems in hex mode

	Backspace in overtype mode (picture mode
	needs work).

	Don't use paths which begin with ! as directories.

	Fix more segfault problems: use doswitch instead of doedit.

	Don't lock scratch buffers.

	Run gcc -pedantic

Sun Mar 20 11:54:44 EST 2005

	Hex edit mode

	Do not CD from names on command line

	Support for wheel mouse

Sat Mar 19 17:08:05 EST 2005

	Fix != in math prompt

	Add modifiers to macros

	Improve jmacs
	Jmacs: orphaned buffers were not having locks deleted
