@@ -4,7 +4,7 @@
 AC_PREREQ(2.54)
 
 #### Here's the only place where to change version number ####
-AC_INIT(joe, 3.2)
+AC_INIT(joe, 3.3-1)
 AC_CONFIG_SRCDIR([b.c])
 
 AC_CANONICAL_BUILD
