@@ -1,3 +1,8 @@
+Sun Apr 17 12:05:32 EDT 2005
+
+	Scripts for Cygwin.
+	Version numbering scheme for Cygwin.
+
 Fri Apr  8 10:27:24 EDT 2005
 
 	Add awk syntax file
